# StegID

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  INTERFACES.md  LICENSE  PHASES.md  README.md  README_AI_ENTITY_IDENTITY.md  SECURITY.md  SECURITY_CONTACT.md  THREAT_MODEL.md  TIERS.md  continuity-keyring.md  continuity-receipt.schema.json  keys.json  pyproject.toml
.github/: CODEOWNERS.txt
.github/workflows/: ci.yml  keygen.yml
docs/: AI_ENTITY_IDENTITY_SPEC_V1.md  CONTINUITY_RECEIPTS.md  CONTRACT_STABILITY.md  CRYPTO_AGILITY.md  LAUNCH_CHECKLIST.md  RECOVERY_CAPABILITY_CLASSES.md  ROSETTA_ARTIFACT_v0.md  STEG_CONTINUITY_GUARANTEES.md  VERSION_FREEZE_v1.md  WHY_STEGID_EXISTS.md
examples/stegtv_fastapi/: README.md  requirements.txt
examples/stegtv_fastapi/app/: audit.py  main.py  middleware.py  models.py  security.py  settings.py  (+1 more)
interfaces/: stegtalk_transport.md
public_keys/: keys.json
schemas/: ai_entity_identity_v1.json
src/: __init__.py
src/identity/: __init__.py  __main__.py  continuity_receipts.py  crypto_agility.py  entity_identity.py  envelope.py  keyring.py  policy.py  stegtv_adapter.py  validation.py  verify_entrypoint.py
src/stegid/: __init__.py  receipts.py
src/stegtalk_transport/: __init__.py  carriers.py  envelope.py  handoff.py  stegid_verifier_adapter.py
tests/: test_continuity_contract_v1.py  test_envelope_fragmentation.py  test_receipts_and_adapter.py  test_transport_handoff.py  test_transport_handoff_verifier_wiring.py  test_verify_entrypoint.py
tools/: keygen_ed25519.py  mint_receipt.py  verify_receipt.py
